--- a/src/patternfly/components/Table/table-th.hbs
+++ b/src/patternfly/components/Table/table-th.hbs
@@ -1,4 +1,5 @@
-<th class="{{#if table-th--modifier}} {{table-th--modifier}}{{/if}}
+<th class="{{pfv}}table__th
+  {{#if table-th--modifier}} {{table-th--modifier}}{{/if}}
   {{#if table-th--compound-expansion-toggle}} {{pfv}}table__compound-expansion-toggle{{/if}}
   {{#if table-th--sortable}} {{pfv}}table__sort{{/if}}
   {{#if table-th--IsSortable}} {{pfv}}table__sort{{/if}}
