--- a/src/patternfly/components/Table/table-tr.hbs
+++ b/src/patternfly/components/Table/table-tr.hbs
@@ -1,4 +1,4 @@
-<tr class="
+<tr class="{{pfv}}table__tr
   {{#if table-tr--expandable}} {{pfv}}table__expandable-row{{/if}}
   {{#if table-tr--IsControlRow}} {{pfv}}table__control-row{{/if}}
   {{#if table-tr--IsExpanded}} pf-m-expanded{{/if}}
