--- a/src/patternfly/components/Table/table-td.hbs
+++ b/src/patternfly/components/Table/table-td.hbs
@@ -1,4 +1,4 @@
-<{{#if table-td--type}}{{table-td--type}}{{else}}td{{/if}} class="
+<{{#if table-td--type}}{{table-td--type}}{{else}}td{{/if}} class="{{pfv}}table__td
   {{~#if table-td--toggle}} {{pfv}}table__toggle{{/if}}
   {{~#if table-td--check}} {{pfv}}table__check{{/if}}
   {{~#if table-td--action}} {{pfv}}table__action{{/if}}
