Combine chip and chipGroup

--- a/src/patternfly/components/_all.scss
+++ b/src/patternfly/components/_all.scss
@@ -17,7 +17,7 @@
 @import "./Card/card";
 @import "./Check/check";
 @import "./Chip/chip";
-@import "./ChipGroup/chip-group";
+@import "./Chip/chip-group";
 @import "./ClipboardCopy/clipboard-copy";
 @import "./CodeBlock/code-block";
 @import "./CodeEditor/code-editor";
