--- a/src/patternfly/components/List/list.scss
+++ b/src/patternfly/components/List/list.scss
@@ -20,7 +20,7 @@
   --#{$list}__item-icon--MinWidth: var(--#{$pf-global}--icon--FontSize--sm);
   --#{$list}__item-icon--MarginTop: #{pf-size-prem(6px)};
   --#{$list}__item-icon--MarginRight: var(--#{$pf-global}--spacer--sm);
-  --#{$list}__item-icon--Color: var(--#{$pf-global}--icon--Color--light);
+  --#{$list}__item-icon--Color: var(--#{$pf-global}--icon--Color--dark);
   --#{$list}__item-icon--FontSize: var(--#{$pf-global}--icon--FontSize--sm);
   --#{$list}--m-icon-lg__item-icon--MinWidth: var(--#{$pf-global}--icon--FontSize--lg);
   --#{$list}--m-icon-lg__item-icon--MarginRight: var(--#{$pf-global}--spacer--md);
