feat(form-control): add pf-m-status to icon

--- a/src/patternfly/components/FormControl/form-control-icon.hbs
+++ b/src/patternfly/components/FormControl/form-control-icon.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}form-control__icon{{#if form-control-icon--modifier}} {{form-control-icon--modifier}}{{/if}}"
+<div class="{{pfv}}form-control__icon{{#if form-control-icon--IsStatus}} pf-m-status{{/if}}{{#if form-control-icon--modifier}} {{form-control-icon--modifier}}{{/if}}"
   {{#if form-control-icon--attribute}}
     {{{form-control-icon--attribute}}}
   {{/if}}>
