--- a/src/patternfly/components/FormControl/form-control-select.hbs
+++ b/src/patternfly/components/FormControl/form-control-select.hbs
@@ -1,4 +1,4 @@
-<select class="{{pfv}}form-control--select {{#if form-control-select--IsExpanded}} pf-m-expanded{{/if}}{{#if form-control-select--modifier}} {{form-control-select--modifier}}{{/if}}"
+<select class="{{#if form-control-select--IsExpanded}} pf-m-expanded{{/if}}{{#if form-control-select--modifier}} {{form-control-select--modifier}}{{/if}}"
     {{#if form-control--IsDisabled}} disabled{{/if}}
     {{#if form-control--IsReadonly}} readonly{{/if}}
     {{#if form-control--IsRequired}} required{{/if}}
