--- a/src/patternfly/components/FormControl/form-control.hbs
+++ b/src/patternfly/components/FormControl/form-control.hbs
@@ -14,7 +14,7 @@
   {{#ifEquals controlType "select"}}
     {{> form-control-select}}
   {{else}}
-    <{{controlType}} class="{{pfv}}form-control--{{controlType}}{{#if form-control--modifier}} {{form-control--modifier}}{{/if}}"
+    <{{controlType}} class="{{#if form-control--modifier}} {{form-control--modifier}}{{/if}}"
       {{#if form-control--IsDisabled}} disabled{{/if}}
       {{#if form-control--IsReadonly}} readonly{{/if}}
       {{#if form-control--IsRequired}} required{{/if}}
